# CADGameFusion

./: .gitignore  .gitmodules  .vcpkg-configuration.json  AGENTS.md  AI_SESSION_LOG.md  BATCH1_PERSISTENCE_REPORT.md  BRANCH_PROTECTION_RESTORED_2025_09_24.md  CHANGELOG.md  CI_7DAY_TREND_IMPLEMENTATION_SUMMARY_2025_09_23.md  CI_ACTUAL_STATUS_REPORT.md  CI_ENHANCEMENT_TEST_REPORT.md  CI_FIX_REPORT.md  CI_FIX_VALIDATION_REPORT.md  CI_IMPLEMENTATION_REPORT_2025_09_24.md  CI_STATISTICS_VALIDATION_REPORT.md  CI_STATUS_REPORT.md  CI_STATUS_REPORT_2025_09_21.md  CI_TEST_REPORT.md  CI_VALIDATION_SUCCESS_REPORT.md  CI_VALIDATION_TEST_REPORT.md  CI_VCPKG_COMPARISON_TEST_REPORT.md  CI_VERIFICATION_REPORT.md  CMakeLists.txt  COMPLEX_SCENE_FULL_VALIDATION_REPORT.md  COMPLEX_SCENE_SPEC_READY_REPORT.md  COMPREHENSIVE_PROJECT_COMPLETION_REPORT.md  CONTRIBUTING.md  COORDINATE_SYSTEM_FIX_REPORT.md  CRASH_FIX_REPORT.md  DAILY_CI_STATUS_VERIFICATION_REPORT_2025_09_20.md  DESIGN_FUNCTION_REPORT_v0.3.2.md  DESIGN_FUNCTION_REPORT_v0.4.0.md  DEVELOPMENT_PLAN.md  DIALOG_ENHANCEMENT_CI_REPORT.md  DIRTY_FLAG_FINAL_FIX.md  DIRTY_FLAG_FIX_REPORT.md  EXPORTS_AUTOMATION_COMPLETE_2025_09_25.md  EXPORT_CLI_CI_VALIDATION_REPORT.md  EXPORT_CLI_COMPLEX_REPORT.md  EXPORT_CLI_FINAL_REPORT.md  (+84 more)
core/: CMakeLists.txt
core/src/: bounds.cpp  commands.cpp  core_c_api.cpp  document.cpp  geometry2d.cpp  mesh_export.cpp  ops2d.cpp  solver.cpp
editor/qt/: CMakeLists.txt  README.md
plugins/: CMakeLists.txt  dwg_importer_plugin.cpp  dxf_block_entity_committers.cpp  dxf_block_entity_committers.h  dxf_block_entry_committers.cpp  dxf_block_entry_committers.h  dxf_block_header.cpp  dxf_block_header.h  dxf_block_leaf_entity_emitters.cpp  dxf_block_leaf_entity_emitters.h  dxf_color.cpp  dxf_color.h  dxf_document_commit_context.cpp  dxf_document_commit_context.h  dxf_ellipse_entity_parser.cpp  dxf_ellipse_entity_parser.h  dxf_exporter_plugin.cpp  dxf_header_vars.cpp  dxf_header_vars.h  dxf_importer_internal_types.h  dxf_importer_plugin.cpp  dxf_layout_objects.cpp  dxf_layout_objects.h  dxf_libdxfrw_adapter.cpp  dxf_libdxfrw_adapter.hpp  dxf_math_utils.cpp  dxf_math_utils.h  dxf_metadata_writer.cpp  dxf_metadata_writer.h  dxf_parser_helpers.cpp  dxf_parser_helpers.h  dxf_parser_name_routing.cpp  dxf_parser_name_routing.h  dxf_parser_zero_record.cpp  dxf_parser_zero_record.h  dxf_polyline_entity_parser.cpp  dxf_polyline_entity_parser.h  dxf_root_block_committers.cpp  dxf_root_block_committers.h  dxf_simple_geometry_entities.cpp  (+22 more)
tests/: CMakeLists.txt
tests/c_abi/: CMakeLists.txt  test_c_headers.c
tests/core/: CMakeLists.txt  test_boolean_offset.cpp  test_boolean_offset_strict.cpp  test_c_api_document_query.cpp  test_complex_strict.cpp  test_constraints_basic.cpp  test_content_bounds.cpp  test_document_change_batch.cpp  test_document_entities.cpp  test_document_group_id.cpp  test_document_layers.cpp  test_document_metadata.cpp  test_document_notifications.cpp  test_document_unit_scale.cpp  test_extrude_mesh.cpp  test_mesh_export.cpp  test_revolve_mesh.cpp  test_robustness.cpp  test_simple.cpp  test_solver_baseline.cpp  test_solver_conflicts.cpp  test_solver_constraints.cpp  test_solver_diagnostics.cpp  test_solver_poc.cpp  test_solver_substitutions.cpp  test_triangulation.cpp
tests/package_consumer/: CMakeLists.txt  main.c
tests/plugin_data/: cjk_default_family.dxf  dxf_roundtrip_source_document.json  hatch_dash_sample.dxf  hatch_dense_sample.dxf  hatch_large_boundary_budget_sample.dxf  importer_blocks.dxf  importer_entities.dxf  importer_text_metadata.dxf  libdxfrw_orphan_dimension_block.dxf  libdxfrw_truewhite_dimension_explicit_child_colors.dxf  nonfinite_numbers_sample.dxf  render_cli_dimension_sample.dxf  render_cli_semantic_sample.dxf  step186_insert_text_bundle_sample.dxf  step186_insert_text_bundle_variant_sample.dxf  step186_insert_triad_sample.dxf  step186_leader_sample.dxf  step186_mixed_origin_sample.dxf  step186_mleader_sample.dxf  step186_multi_layout_sample.dxf  step186_paperspace_annotation_bundle_sample.dxf  step186_paperspace_combo_sample.dxf  step186_paperspace_insert_dimension_hatch_sample.dxf  step186_paperspace_insert_dimension_sample.dxf  step186_paperspace_insert_leader_sample.dxf  step186_paperspace_insert_styles_sample.dxf  step186_paperspace_insert_styles_variant_sample.dxf  step186_paperspace_insert_text_bundle_sample.dxf  step186_table_sample.dxf  step186_text_kinds_sample.dxf  step237_insert_attributes_sample.dxf  text_align_partial.dxf  text_align_partial_extended.dxf  viewport_sample.dxf
tests/qt/: CMakeLists.txt  test_qt_align_panel.cpp  test_qt_canvas_box_select.cpp  test_qt_canvas_color_metadata.cpp  test_qt_document_commands.cpp  test_qt_export_helpers.cpp  test_qt_export_meta.cpp  test_qt_gizmo.cpp  test_qt_guide_persistence.cpp  test_qt_guides.cpp  test_qt_layer_lock.cpp  test_qt_layer_panel.cpp  test_qt_live_export.cpp  test_qt_m1_e2e.cpp  test_qt_m1_transforms.cpp  test_qt_measure_tool.cpp  test_qt_pivot.cpp  test_qt_project_legacy_load.cpp  test_qt_project_roundtrip.cpp  test_qt_property_panel.cpp  test_qt_selection_model.cpp  test_qt_viewport3d.cpp  (+3 more)
tools/: CMakeLists.txt  benchmark_ci.sh  check_local_summary.sh  check_ui_flow_stage_trend_contract.py  check_weekly_summary.sh  ci_editor_light.sh  ci_scenes.conf  compare_fields.py  convert_cli.cpp  document_migrate.py  dxf_writer.hpp  editor_case_selection_trend.py  editor_daily_validation.sh  editor_gate.sh  editor_gate_trend.py  editor_parallel_cycle.sh  editor_perf_trend.py  editor_real_scene_perf_trend.py  editor_stability_soak.py  editor_ui_flow_stage_trend.py  editor_weekly_median_validation.sh  editor_weekly_validation.sh  export_cli.cpp  generate_editor_roundtrip_cases.py  generate_editor_roundtrip_previews.py  json2dxf.cpp  local_ci.sh  plm_annotate.py  plm_convert.py  plm_dwg_open_desktop_smoke.py  plm_dwg_open_matrix_cases.json  plm_dwg_open_matrix_smoke.py  plm_dwg_open_smoke.py  plm_error_codes_smoke.sh  plm_preview.py  plm_router_service.py  plm_router_smoke.py  plm_smoke.sh  plm_solve_cadgf_smoke.py  plugin_host_demo.cpp  (+28 more)
(+1669 files in other folders)
